# qt_projects

./: .gitignore  README.md
.cache/clangd/index/: main.cpp.A8576DE37BC2815F.idx  mainwindow.cpp.99DDA34E842DE670.idx  mainwindow.h.67AF349757801D39.idx
OpenHash/: CMakeLists.txt
OpenHash/.cache/clangd/index/: MainUI.cpp.6984E3C4AFE0FDE8.idx  MainUI.h.7AD71176B83D1473.idx  hash.cpp.A336F83EA2A79A2D.idx  hash.h.A0CBE7958A371F4F.idx  main.cpp.835D466ADA5A3550.idx
OpenHash/resource/: word.csv
OpenHash/src/: MainUI.cpp  MainUI.h  hash.cpp  hash.h  main.cpp
Simple_geometric_expert_system/: CMakeLists.txt  README.md
Simple_geometric_expert_system/.cache/clangd/index/: Engine.cpp.60F0F5F583F09144.idx  Engine.h.250040334D18EF0C.idx  Frame.cpp.BC892A3C33B6E9ED.idx  Frame.h.CBA1E5B7B443E1B1.idx  Handler.cpp.D7444B0AB7403ECB.idx  Handler.h.3031F8D978B83386.idx  MainWindow.cpp.E86B36CEF51C5E8E.idx  MainWindow.h.1FEDE727F047D7C1.idx  Rule.cpp.BFAA017CA9C06D9E.idx  Rule.h.EE556A9328AE6966.idx  RuleEdit.cpp.664C371C8B144277.idx  main.cpp.EC77206D48BEEA5E.idx
Simple_geometric_expert_system/code/include/: Engine.h  Frame.h  Handler.h  MainWindow.h  Rule.h  RuleEdit.h
Simple_geometric_expert_system/code/source/: Engine.cpp  Frame.cpp  Handler.cpp  MainWindow.cpp  Rule  RuleEdit.cpp
Simple_geometric_expert_system/facts/: facts.txt
Simple_geometric_expert_system/rules/: rules.txt
XVideoEdit/: .gitignore  CMakeLists.txt  XVideoUI.qrc
XVideoEdit/.cache/clangd/index/: main.cpp.7F8A05F506DDCA99.idx  xvideothread.cpp.A7512E5723F1AF5C.idx  xvideothread.h.8253A62488FA76D1.idx  xvideoui.cpp.3115D29EB5BEB684.idx  xvideoui.h.DE87C4E1315B23B6.idx  xvideowidget.cpp.E6859F6C30DE7B78.idx  xvideowidget.h.125563E90BE07E3B.idx
XVideoEdit/src/: XAudio.cpp  XAudio.h  XFilter.cpp  XFilter.h  XImagePro.cpp  XImagePro.h  main.cpp  xvideothread.cpp  xvideothread.h  xvideoui.cpp  xvideoui.h  xvideoui.ui  xvideowidget.cpp  xvideowidget.h
build-XVideoEdit-unknown-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  XVideoEdit  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-XVideoEdit-unknown-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-d0a98da114952af55105.json  cmakeFiles-v1-debc183efe812e6694ae.json  cmakeFiles-v1-fbf39597d4804d9dd2ef.json  codemodel-v2-162a1e5a7ec818cd1aa2.json  codemodel-v2-7dbfb585b39b72a05133.json  index-2023-01-29T12-29-04-0730.json  index-2023-01-29T23-52-58-0139.json  index-2023-01-30T02-22-05-0071.json  target-XVideoEdit-Debug-5652489596ca6b718a7b.json  target-XVideoEdit-Debug-f90268518bbbd774fe31.json  (+2 more)
build-XVideoEdit-unknown-Debug/.cmake/api/v1/reply.prev/: cache-v2-107a1afa0a034e02ab33.json  cache-v2-d4dce6ac7eafcfe326fb.json  cmakeFiles-v1-f128fba9e5b267c10526.json  codemodel-v2-2cc354bb8271900b19d3.json  codemodel-v2-4010cd978d02040f93b7.json  directory-.-Debug-d92a4c0a007300bf4a23.json  directory-.-Debug-df9e3d3a8dd39e278192.json  index-2023-01-29T12-26-22-0930.json  index-2023-01-29T23-44-53-0741.json  target-XVideoEdit-Debug-1ece5334fa0449e56140.json  target-XVideoEdit-Debug-8a1c92b7563a27993417.json
build-XVideoEdit-unknown-Debug/.qt/: QtDeploySupport.cmake
build-XVideoEdit-unknown-Debug/.qtc_clangd/: compile_commands.json
build-XVideoEdit-unknown-Debug/XVideoEdit_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-XVideoEdit-unknown-Debug/XVideoEdit_autogen/UVLADIE3JM/: moc_xvideothread.cpp  moc_xvideothread.cpp.d  moc_xvideoui.cpp  moc_xvideoui.cpp.d  moc_xvideowidget.cpp  moc_xvideowidget.cpp.d
build-XVideoEdit-unknown-Debug/XVideoEdit_autogen/include/: ui_xvideoui.h
build-widget_demo-unknown-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  widget_demo
build-widget_demo-unknown-Debug/.qt/: QtDeploySupport.cmake
build-widget_demo-unknown-Debug/.qtc_clangd/: compile_commands.json
build-widget_demo-unknown-Debug/widget_demo_autogen/: deps  mocs_compilation.cpp
build-widget_demo-unknown-Debug/widget_demo_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_matview.cpp  moc_matview.cpp.d
build-widget_demo-unknown-Debug/widget_demo_autogen/include/: ui_mainwindow.h
widget_demo/: CMakeLists.txt  mainwindow.ui  matview.h
widget_demo/.cache/clangd/index/: main.cpp.A8576DE37BC2815F.idx  mainwindow.cpp.99DDA34E842DE670.idx  mainwindow.h.67AF349757801D39.idx  matview.cpp.B163B54FAFA6939A.idx  matview.h.46E8F63AB3895A79.idx
widget_demo/src/: MatPro.cpp  MatPro.h  XVideoThread.cpp  XVideoThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matview.cpp  matview.h
widget_demo/trains/images/: name_lable.csv
(+133 files in other folders)
